# orator

./: CHANGELOG.md  README.rst  pyproject.toml  tox.ini
orator/: __init__.py
orator/commands/: command.py
orator/commands/migrations/: install_command.py  make_command.py  migrate_command.py  refresh_command.py  reset_command.py  rollback_command.py  status_command.py
orator/commands/models/: make_command.py
orator/commands/seeds/: make_command.py  seed_command.py
orator/connectors/: mysql_connector.py  sqlite_connector.py
orator/orm/: builder.py  model.py  utils.py
orator/support/: grammar.py
tests/commands/: __init__.py
tests/integrations/: __init__.py
tests/migrations/: test_database_migration_repository.py  test_migrator.py
tests/orm/: test_model.py
tests/orm/relations/: test_belongs_to.py  test_belongs_to_many.py  test_has_many.py  test_has_many_through.py  test_has_one.py  test_morph.py  test_morph_to.py  test_morph_to_many.py  test_relation.py
tests/seeds/: test_seeder.py
