[tool.poetry]
name = "orator"
version = "0.10.0"
description = "Fork of the Orator ORM that provides a simple yet beautiful ActiveRecord implementation."

license = ""

authors = [
    "Grigorii Novikov <genovikov93@gmail.com>"
]

readme = 'README.rst'

repository = "https://github.com/Oper18/orator"
homepage = "https://github.com/Oper18/orator"

keywords = ['database', 'orm']


[tool.poetry.dependencies]
python = "^3.9"
backpack = "^0.1"

cleo = "^2.0.1"
inflection = "^0.5.1"
Faker = "^19.1.0"
lazy-object-proxy = "^1.9.0"
pendulum = "^2.1.2"
pyaml = "^23.7.0"
pyyaml = "^6.0.1"
Pygments = "^2.15.1"
simplejson = "^3.19.1"
six = "^1.16.0"
wrapt = "^1.15.0"

# Extras
psycopg2 = { version = "^2.9.6", optional = true }
PyMySQL = { version = "^1.1.0", optional = true }
mysqlclient = { version = "^2.2.0", optional = true }


[tool.poetry.dev-dependencies]
flexmock = "0.11.3"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
tox = "^4.6.4"
pre-commit = "^3.3.3"


[tool.poetry.extras]
mysql = ["mysqlclient"]
mysql-python = ["PyMySQL"]
pgsql = ["psycopg2"]


[tool.poetry.scripts]
orator = 'orator.commands.application:application.run'


[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"
